[package]
name = "bellpepper-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellpepper-core-origin = { git = "https://github.com/lurk-lab/bellpepper", rev = "7422cd4", package = "bellpepper-core" }
bellpepper-core-modify = { git = "https://github.com/zkp-learning/bellpepper", rev = "22f81bb", package = "bellpepper-core" }
reservoir = "0.2"
rand = "*"

[dev-dependencies]
blstrs = "0.7"
criterion = "0.4"
ff = "0.13.0"
rand_core = "0.6"
rand_xorshift = "0.3.0"

[[bench]]
name = "lc"
harness = false
